manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
        - name: project
          image: arifariofficial/project:v.01
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
