manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
